# audioscrape

./: .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
audioscrape/: __init__.py  __main__.py  audioconvert.py  classify.py  soundcloud.py  youtube.py
src/audioscrape/: __init__.py  soundcloud.py  youtube.py
tests/: test_audioscrape.py  test_classify.py
youtube_audio_scraper/: __init__.py  __main__.py
