[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "audioscrape"
authors = [{ name = "Carl Thomé", email = "carlthome@gmail.com" }]
description = "Scrape online audio with a simple command-line interface"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["audio", "music", "sound"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mediapipe >= 0.10.1",
    "requests >= 2.31.0",
    "soundcloud-lib >= 0.6.1",
    "soundfile >= 0.12.1",
    "tqdm >= 4.65.0",
    "yt-dlp >= 2023.6.22",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]

[project.scripts]
audioscrape = "audioscrape.__main__:cli"

[project.urls]
Homepage = "https://github.com/carlthome/audio-scraper"
Bugs = "https://github.com/carlthome/audioscrape/issues"

[tool.setuptools_scm]
version_file = "audioscrape/version.py"
local_scheme = "no-local-version"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.autoflake]
remove-all-unused-imports = true
